scaladoc/resources/dotty_res/styles/scalastyle.css
/* ... */
:root.theme-dark {
  /* Color Settings */
  --border-light: #DADFE6;
  --border-medium: #abc;

  --body-bg: hsl(200, 100%, 3%);
  --body-fg: #CCC;
  --title-fg: hsl(200, 50%, 80%);

  --active-bg: hsl(200, 80%, 25%);
  --active-bg-shadow: hsl(200, 38%, 50%);
  --active-fg: var(--body-fg);

  --inactive-bg: #444;
  --inactive-bg-shadow: var(--inactive-fg);
  --inactive-fg: #777;

  --code-bg: hsl(200, 30%, 10%);
  --code-fg: #bfbfbf;
  --symbol-fg: var(--body-fg);
  --link-fg: hsl(200, 100%, 70%);
  --link-hover-fg: #00A0D0;

  --link-sig-fg: #2da0d1;

  --leftbar-bg: hsl(200, 100%, 14%);
  --leftbar-fg: #CCC;
  --leftbar-current-bg: hsl(200, 100%, 35%);
  --leftbar-current-fg: #FFF;
  --leftbar-hover-bg: hsl(200, 80%, 25%);
  --leftbar-hover-fg: #CCC;

  --footer-bg: var(--body-bg);
  --footer-fg: var(--body-fg);

  --icon-color: #00485E;
  --selected-fg: #00303E;
  --selected-bg: #BFE7F3;

}

body {
  margin: 0;
  padding: 0;
  font-family: "Lato", sans-serif;
  font-size: 16px;
  background: var(--body-bg);
}
body, button, input {
  color: var(--body-fg);
}

/* Page layout */
#container {
  min-height: 100%;
}
#leftColumn {
  position: fixed;
  width: var(--side-width);
  height: 100%;
  border-right: none;
  background: var(--leftbar-bg);
  display: flex;
  flex-direction: column;
  z-index: 5;
}
main {
  min-height: calc(100vh - var(--footer-height) - 24px);
}
#content {
  margin-left: var(--side-width);
  padding: var(--content-padding);
  padding-bottom: calc(24px + var(--footer-height));
}

/* Text */
h1, h2, h3 {
  font-family: var(--title-font);
  color: var(--title-fg);
}
.monospace {
  font-family: var(--mono-font);
  background: var(--documentable-bg);
  font-variant-ligatures: none;
}
pre, code, .hljs {
  font-family: var(--mono-font);
  background: var(--code-bg);
  font-variant-ligatures: none;
}
code {
  font-size: .8em;
  padding: 0 .3em;
}
pre {
  overflow: visible;
  scrollbar-width: thin;
  margin: 0px;
}
pre code, pre code.hljs {
  font-size: 1em;
  padding: 0;
}
.snippet {
  padding: 12px 8px 10px 12px;
  background: var(--code-bg);
  margin: 1em 0px;
  border-radius: 2px;
  box-shadow: 0 0 2px #888;
}
.snippet-error {
  border-bottom: 2px dotted red;
}
.snippet-warn {
  border-bottom: 2px dotted orange;
}
.snippet-info {
  border-bottom: 2px dotted teal;
}
.snippet-debug {
  border-bottom: 2px dotted pink;
}
.tooltip {
  position: relative;
}
.tooltip:hover:after {
  content: attr(label);
  padding: 4px 8px;
  color: white;
  background-color:black;
  position: absolute;
  left: 0;
  z-index:10;
  box-shadow:0 0 3px #444;
  opacity: 0.8;
}
pre, .symbol.monospace {
  font-weight: 500;
  font-size: 12px;
}
pre .hljs-comment {
  /* Fold comments in snippets */
  white-space: normal;
}
.symbol.monospace {
  padding: 12px 8px 10px 12px;
}
a, a:visited, span[data-unresolved-link] {
  text-decoration: none;
  color: var(--link-fg);
}
a:hover, a:active {
  color: var(--link-hover-fg);
  text-decoration: underline;
}

/* Tables */
table {
  border-collapse: collapse;
  min-width: 400px;
}
td, th {
  border: 1px solid var(--border-medium);
  padding: .5rem;
}
th {
  border-bottom: 2px solid var(--border-medium);
}

/* Left bar toggler, only on small screens */
#leftToggler {
  display: none;
  color: var(--icon-color);
  cursor: pointer;
}

/* Left bar */
#paneSearch {
  display: none;
}
#logo>span {
  display: inline-block;
  padding: 8px 8px 8px 8px;
  vertical-align: middle;
}

#logo img {
  max-height: 54px;
  max-width: 54px;
  cursor: pointer;
}

#logo .projectName {
  color: var(--leftbar-fg);
  font-size: 28px;
  font-weight: bold;
}

#logo .projectVersion {
  color: var(--leftbar-fg);
  font-size: 12px;
  display: flex;
  padding-left: calc(0.05 * var(--side-width));
  padding-right: calc(0.08 * var(--side-width));
}

.scaladoc_logo {
  width: 116px;
}

/* Navigation */
#sideMenu2 {
  overflow: auto;
  overflow-x: hidden;
  overflow-y: scroll;
  scrollbar-width: thin;
  height: 100%;
  font-size: var(--leftbar-font-size);
}

/* divs in sidebar represent entry and its children */
#sideMenu2 div {
  padding-left: 0.7em;
  position: relative;
  display: none;
}

#sideMenu2 div.expanded {
  display: block;
}

/* hide children of hidden entries even if are expanded */
#sideMenu2 div>div.expanded {
  display: none;
}

/* show direct children of currently exmanded node*/
#sideMenu2 div.expanded>div {
  display: block;
}
/* always show top level entry*/
#sideMenu2>div{
  display: block;
}

#sideMenu2 span.micon {
  height: 16px;
  width: 16px;
  margin-right: 8px;
}

/* 'a's in side menu represent text of entry with link */
#sideMenu2 a {
  display: flex;
  align-items: center;
  flex: 1;
  overflow-x: hidden;
  overflow-wrap: anywhere;
  color: var(--leftbar-fg);
  margin-right: .5rem;
  padding-top: 3px;
  padding-bottom: 3px;
  margin-top: 1px;
  margin-bottom: 1px;
  width: 100%;
  /* This trick adds selected background stretching to the left side of screen */
  margin-left: calc(0px - var(--side-width));
  padding-left: var(--side-width);
  width: calc(2 * var(--side-width));
}

#sideMenu2 a.selected {
  background: var(--leftbar-current-bg);
  color: var(--leftbar-current-fg);
  font-weight: bold;
}

#sideMenu2 a:hover {
  color: var(--leftbar-hover-fg);
  background: var(--leftbar-hover-bg);
}

/* spans represent a expand button */
span.ar {
  align-items: center;
  cursor: pointer;
  position: absolute;
  right: 1em;
  top: 0px;
  padding: 4px;
}

span.ar::before {
  content: "\e903"; /* arrow down */
  font-family: "dotty-icons" !important;
  font-size: 20px;
  line-height: var(--leftbar-font-size);
  color: var(--leftbar-fg);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}
.expanded>span.ar::before {
  content: "\e905"; /* arrow up */
}

.div:hover>span.ar::before {
  color: var(--leftbar-current-bg);
}

/* Cover */
.cover h1 {
  font-size: 38px;
  margin-top: 1rem;
  margin-bottom: .25rem;
}
/* ... */

